# grandma3_xtouch

./: .gitignore  CMakeLists.txt  main.cpp  x-touch.cpp  x-touch.h
luaplugin/: main.lua
src/: CMakeLists.txt  main.cpp
src/TCPServer/: CMakeLists.txt  maserver.cpp  server.cpp
src/XTouchController/: CMakeLists.txt  channel.cpp  channelgroup.cpp  controller.cpp
src/XTouchLib/: CMakeLists.txt  x-touch.cpp
src/helpers/: CMakeLists.txt  alive.cpp  delayed.cpp  interface.cpp
src/include/: Address.h  Channel.h  ChannelGroup.h  IPC.h  Observer.h  XController.h  alive.h  delayed.h  guards.h  interface.h  maserver.h  standard.h  tcpserver.h  x-touch.h
src/tests/: main.cpp
